# analyseur

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
anaCBGTC/: setup.py
anaCBGTC/anaCBGTC/: __init__.py
analyseur/cbgt/: __init__.py  isi.py  loader.py  variation.py
analyseur/cbgt/stats/: isi.py  utilities.py  variation.py
docs/: analyze_cbgt.rst  analyze_cbgtc.rst  analyze_rbcbg.rst  conf.py  contents.rst  index.rst  requirements.txt  simulate_cbgt.rst  simulate_cbgtc.rst
docs/cbgt/: contents.rst  curate.rst  loader.rst  parameters.rst
docs/cbgt/analytics/: ratesparsity.rst
docs/cbgt/examples/scripts/: collage_observables.py  collage_raster.py
docs/cbgt/stats/: isi.rst  pca.rst  popact.rst  psd.rst  psth.rst  rate.rst  ratesparsity.rst  sync.py  sync.rst  variation.rst  wavelet.rst
docs/cbgt/visual/: connections.rst  distribution.py  distribution.rst  markerplot.rst  measurable.rst  peristimulus.rst  popact.rst  popurate.rst  powspec.rst  raster.rst  rate.rst  scalo.rst  tabular.rst  variation.rst
docs/cbgt/visual/composite/: current_distrib.rst  observables.rst
docs/cbgtc/: contents.rst  curate.rst  loader.rst  parameters.rst
docs/cbgtc/analytics/: ratesparsity.rst
docs/cbgtc/stats/: compute_shared.rst  isi.rst  pca.rst  popact.rst  psd.rst  psth.rst  rate.rst  sync.rst  variation.rst  wavelet.rst
docs/cbgtc/visual/: connections.rst  distribution.rst  markerplot.rst  measurable.rst  peristimulus.rst  popact.rst  popurate.rst  powspec.rst  rate.rst  scalo.rst  tabular.rst  variation.rst
docs/cbgtc/visual/composite/: observables.rst  (+1 more)
docs/rbcbg/: contents.rst  curate.rst  loader.rst  parameters.rst
docs/rbcbg/stats/: psd.rst  spec.rst
docs/rbcbg/visual/: powspec.rst  rate.rst
docs/scripts/cbgt/: cwt_scalogram.rst  osc_regime.rst  raster_150neurons_1s.rst  raster_all_neurons.rst
docs/scripts/cbgtc/: cwt_scalogram.rst  model_topography.rst  observables.rst  osc_regime.rst  raster_150neurons_1s.rst  raster_all_neurons.rst
docs/scripts/rbcbg/: spectrograms.rst
scripts/cbgt/: cwt_scalogram.m  model_topography.py  osc_regime.py  raster_150neurons_1s.py  raster_all_neurons.py
scripts/cbgtc/: model_topography.py  observables.py  osc_regime.py  raster_150neurons_1s.py  raster_all_neurons.py
scripts/rbcbg/: spectrograms.py
src/analyseur/: __init__.py
src/analyseur/cbgt/: curate.py  loader.py  parameters.py  sim_parameters.py
src/analyseur/cbgtc/: __init__.py  curate.py  loader.py  parameters.py
src/analyseur/rBCBG/: curate.py  loader.py  parameters.py
src/analyseur/rbcbg/: curate.py  loader.py  parameters.py
(+81 files in other folders)
