[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosig-analyzer"
version = "0.0.1"
authors = [
  { name="Lungsi NGWUA", email="neuralgraphs@gmail.com" },
]
maintainers = [
  { name="Lungsi NGWUA", email="neuralgraphs@gmail.com" },
]
description = "Module (Library) for analyzing models (CBGTC, rBCBG) outputs."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
keywords = ["NEUROSCIENCE", "COMPUTATIONAL NEUROSCIENCE", "SIGNAL PROCESSING", "SPIKING", "BASAL GANGLIA"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Development Status :: 3 - Alpha",      # "3 - Alpha", "4 - Beta" or "5 - Production/Stable"
    "Intended Audience :: Developers",      # Define that your audience are developers
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "scikit-learn", # import sklearn
    "pywavelets",
    "networkx",
]

#[tool.setuptools]
#packages = {find = {where = ["src"]}}

[project.urls]
"Homepage" = "https://analyseur.readthedocs.io/"
"Source" = "https://github.com/neuralmodelling/analyseur"
"Bug Reports" = "https://github.com/neuralmodelling/analyseur/issues"
